@@ -1,3 +1,8 @@
+2003-02-20  Gary Thomas  <gary@mind.be>
+
+	* src/mpc50_misc.c (plf_hardware_init): Platform needs to call
+	hal_if_init().
+
 2003-02-05  Nick Garnett  <nickg@calivar.com>
 
 	* cdl/hal_arm_xscale_mpc50.cdl: Changed compiler prefix to arm-elf
